Add Report List

--- a/report.html
+++ b/report.html
@@ -7,20 +7,20 @@
     <body>
         <h1>Project 2 Report</h1>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>My service is not a to-do list manager. Rather, it is a tool to keep track of YouTube Let's Plays of various Minecraft modpacks by various YouTubers.</li>
+            <li>My service stores data in the mcyt database, implemented using the MySQL DBMS.</li>
+            <li>I used express to build my service.</li>
+            <li>My web service is available at <a href="https://project2.jarodreichel.me:8443/">https://project2.jarodreichel.me:8443/</a></li>
+            <li>My service's endpoints are all named either series (for GET requests) or ytseries (for other types of requests).</li>
+            <li>My responses and requests are formatted as JSON.</li>
+            <li>My service's endpoints include Create (using POST), Read (using GET), Update (using PATCH), and Delete (using DELETE) operations.</li>
+            <li>I used ufw to block all ports other than 22, 80, 443, and 8443 from external traffic.</li>
+            <li>I am using nginx as a proxy server to encrypt the service's access.</li>
+            <li>I configured (using service.use and service.options) CORS to be enabled using a wildcard endpoint.</li>
+            <li>My service is automatically started with pm2.</li>
+            <li>My service is stored in a Git Repository at <a href="https://github.com/mcadventurecity/cs347-project2">https://github.com/mcadventurecity/cs347-project2</a>.</li>
+            <li>My repository includes schema.sql, and create_mcyt.sql, with passwords redacted.</li>
+            <li>I committed my changes after each major change or addition.</li>
         </ol>
     </body>
 </html>
