--- a/report.html
+++ b/report.html
@@ -24,9 +24,9 @@
         </ol>
         <h2>Endpoint Docs for Peer Reviews</h2>
         <ul>
-            <li>https://project2.jarodreichel.me:8443/series Gets the full list of YouTube Series from the database.</li>
-            <li>https://project2.jarodreichel.me:8443/series/:id Gets the YouTube Series with the specified ID from the database.</li>
-            <li>https://project2.jarodreichel.me:8443/ytseries Posts a new Series to the database, with the following parameters as JSON.&nbsp;
+            <li>https://project2.jarodreichel.me:8443/ytseries/get Gets the full list of YouTube Series from the database.</li>
+            <li>https://project2.jarodreichel.me:8443/ytseries/get/:id Gets the YouTube Series with the specified ID from the database.</li>
+            <li>https://project2.jarodreichel.me:8443/ytseries/add Posts a new Series to the database, with the following parameters as JSON.&nbsp;
                 <ul>
                     <li>packname: a string containing the Minecraft Modpack Name being played.</li>
                     <li>youtuber: the YouTuber creating the Series.</li>
@@ -41,14 +41,14 @@
                         https://project2.jarodreichel.me:8443/ytseries
                 </pre>
             </li>
-            <li>https://project2.jarodreichel.me:8443/ytseries/:id Updates the series with the specified id, using the same JSON parameters as the Post request.&nbsp;
+            <li>https://project2.jarodreichel.me:8443/ytseries/update/:id Updates the series with the specified id, using the same JSON parameters as the Post request.&nbsp;
                 Example curl command:
                 <pre>curl --header 'Content-Type: application/json' \
                     --request PATCH \
                     --data '{"packname": "TNP Limitless 2", "youtuber": "Not MCAdventureCity", "episodecount": 23, "startdate": "2020-09-07", "enddate": "2020-10-23"}' \
                     https://project2.jarodreichel.me:8443/ytseries/1</pre>
             </li>
-            <li>https://project2.jarodreichel.me:8443/ytseries/:id Also can soft-deletes the series with the specified id.&nbsp;
+            <li>https://project2.jarodreichel.me:8443/ytseries/delete/:id Also can soft-deletes the series with the specified id.&nbsp;
                 Example curl command:
                 <pre>
                     curl --request DELETE \
